# legendary-cmd

./: README.md
gitquick/: CMakeLists.txt  startup.sh
gitquick/pkg/: gitquick-1.0-Linux.deb
gitquick/src/: main.c
weather/: CMakeLists.txt
weather/pkg/: weather-1.0-Linux.deb
weather/src/: main.c
